# book_store_rest_api_RUST

./: .env  Cargo.toml
public/: 404.html  index.html
src/: db.rs  main.rs  models.rs  routes.rs  static_files.rs
