[package]
name = "rest_api_rust"
version = "0.1.0"
authors = ["LAKSHITgoel <glakshit0@gmial.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.10.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
rocket = "0.4.1"
rocket_contrib = "0.4.1"
rocket_codegen = "0.4.1"